Fix modal css to work on mobile and desktop

--- a/sdk/src/css/modal.css
+++ b/sdk/src/css/modal.css
@@ -1,42 +1,59 @@
+#modal-image {
+  width: auto;
+  height: auto;
+  max-height: 100%;
+  max-width: 100%;
+}
+
 #close-modal {
-  display: flex;
-  background:#000000;
-  opacity:0.3;
   position:absolute;
   top: 0px;
   right: 0px;
+  display: flex;
+  background:#000000;
+  opacity:0.3;  
 }
 
 .modal {
-  opacity: 0;
-  visibility: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   position: fixed;
   top: 0;
   left: 0;
+  visibility: hidden;
+  opacity: 0;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   background: rgba(0,0,0,0.7);
-  -webkit-transition: 0.3s linear;
-  transition: 0.3s linear;
   z-index: 2147483648;
 }
 .modal-box {
-  display: flex;
-  position: absolute;
+  position: relative;
+  overflow: auto;
   background: #fff;
   box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
   text-align: center;
+  max-height: 90%;
+  max-width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-transition: all 0.3s cubic-bezier(0.2, 0.9, 0.3, 1.5);
   transition: all 0.3s cubic-bezier(0.2, 0.9, 0.3, 1.5);
+  transform: translate(0, 0) scale(1);
 }
 
 .isVisible {
